Remove references to old name, "layout presets"

--- a/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
+++ b/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
@@ -5,7 +5,7 @@
       <providers>
         <add name="baseLayouts" type="Sitecore.BaseLayouts.BaseLayoutStandardValuesProvider, Sitecore.BaseLayouts">
           <param name="innerProvider" type="Sitecore.Data.StandardValuesProvider, Sitecore.Kernel" />
-          <param name="databases" desc="Pipe separated list of the databases that support layout presets">master|web</param>
+          <param name="databases" desc="Pipe separated list of the databases that support base layouts">master|web</param>
         </add>
       </providers>
     </standardValues>
