Config updates, create temporary item for None rather than actual item in database, bug fixes

--- a/Sitecore.BaseLayouts.Website/Sitecore.BaseLayouts.Website.csproj
+++ b/Sitecore.BaseLayouts.Website/Sitecore.BaseLayouts.Website.csproj
@@ -21,6 +21,7 @@
     <IISExpressUseClassicPipelineMode />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -114,8 +115,6 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
-    <None Include="Properties\PublishProfiles\sc72up4.pubxml" />
-    <None Include="Properties\PublishProfiles\sc80up2.pubxml" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -130,7 +129,9 @@
     <Content Include="Views\Shared\TwoColumn.cshtml" />
     <Content Include="Views\Shared\ThreeColumn.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\MainLayout.cshtml" />
   </ItemGroup>
