--- a/Sitecore.BaseLayouts/Sitecore.BaseLayouts.csproj
+++ b/Sitecore.BaseLayouts/Sitecore.BaseLayouts.csproj
@@ -93,9 +93,8 @@
     <Content Include="sitecore modules\shell\BaseLayouts\SelectBaseLayout.xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\PublishProfiles\sc72up4.pubxml" />
+    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
-  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
