--- a/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
+++ b/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
@@ -5,12 +5,24 @@
       <providers>
         <add name="baseLayouts" type="Sitecore.BaseLayouts.BaseLayoutStandardValuesProvider, Sitecore.BaseLayouts">
           <param name="innerProvider" type="Sitecore.Data.StandardValuesProvider, Sitecore.Kernel" />
-          <param name="databases" desc="Pipe separated list of the databases that support base layouts">master|web</param>
+          <param name="layoutValueProvider" type="Sitecore.BaseLayouts.Caching.CachedLayoutValueProvider, Sitecore.BaseLayouts">
+            <param name="innerProvider" type="Sitecore.BaseLayouts.BaseLayoutValueProvider, Sitecore.BaseLayouts">
+              <param name="layoutValueProvider" type="Sitecore.BaseLayouts.BaseLayoutValidator, Sitecore.BaseLayouts"/>
+              <param name="log" type="Sitecore.BaseLayouts.Diagnostics.LogWrapper, Sitecore.BaseLayouts" />
+            </param>
+            <param name="cache" type="Sitecore.BaseLayouts.Caching.LayoutValueCache, Sitecore.BaseLayouts"/>
+          </param>
+          <param name="log" type="Sitecore.BaseLayouts.Diagnostics.LogWrapper, Sitecore.BaseLayouts" />
         </add>
       </providers>
     </standardValues>
     <commands>
       <command name="webedit:selectbaselayout" type="Sitecore.BaseLayouts.Commands.SelectBaseLayout,Sitecore.BaseLayouts"/>
     </commands>
+    <pipelines>
+      <getBaseLayoutItems>
+        <processor type="Sitecore.BaseLayouts.Pipelines.GetLookupSourceItems, Sitecore.BaseLayouts" />
+      </getBaseLayoutItems>
+    </pipelines>
   </sitecore>
 </configuration>
