Add pipeline for saving the base layout, refactor a bit, addm more tests

--- a/Sitecore.BaseLayouts.Tests/Sitecore.BaseLayouts.Tests.csproj
+++ b/Sitecore.BaseLayouts.Tests/Sitecore.BaseLayouts.Tests.csproj
@@ -89,6 +89,7 @@
     <Compile Include="BaseLayoutValidatorTests.cs" />
     <Compile Include="BaseLayoutValueProviderTests.cs" />
     <Compile Include="Caching\CachedLayoutValueProviderTests.cs" />
+    <Compile Include="Commands\SelectBaseLayoutOptionsTests.cs" />
     <Compile Include="Commands\SelectBaseLayoutTests.cs" />
     <Compile Include="FakeDbTestClass.cs" />
     <Compile Include="FakesFactory.cs" />
