--- a/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
+++ b/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
@@ -21,8 +21,14 @@
     </commands>
     <pipelines>
       <getBaseLayoutItems>
-        <processor type="Sitecore.BaseLayouts.Pipelines.GetLookupSourceItems, Sitecore.BaseLayouts" />
+        <processor type="Sitecore.BaseLayouts.Pipelines.GetBaseLayoutItems.GetLookupSourceItems, Sitecore.BaseLayouts" />
       </getBaseLayoutItems>
+      <saveBaseLayout>
+        <processor type="Sitecore.BaseLayouts.Pipelines.SaveBaseLayout.CheckForCircularReference, Sitecore.BaseLayouts">
+          <param name="validator" type="Sitecore.BaseLayouts.BaseLayoutValidator, Sitecore.BaseLayouts" />
+        </processor>
+        <processor type="Sitecore.BaseLayouts.Pipelines.SaveBaseLayout.SaveNewBaseLayout, Sitecore.BaseLayouts" />
+      </saveBaseLayout>
     </pipelines>
   </sitecore>
 </configuration>
