--- a/Sitecore.BaseLayouts/Sitecore.BaseLayouts.csproj
+++ b/Sitecore.BaseLayouts/Sitecore.BaseLayouts.csproj
@@ -69,14 +69,14 @@
     <Compile Include="BaseLayoutItem.cs" />
     <Compile Include="BaseLayoutValidator.cs" />
     <Compile Include="BaseLayoutValueProvider.cs" />
-    <Compile Include="Caching\CachedLayoutValueProvider.cs" />
-    <Compile Include="Caching\ILayoutValueCache.cs" />
-    <Compile Include="Caching\LayoutValueCache.cs" />
+    <Compile Include="Caching\CachedBaseLayoutValueProvider.cs" />
+    <Compile Include="Caching\IBaseLayoutValueCache.cs" />
+    <Compile Include="Caching\BaseLayoutValueCache.cs" />
     <Compile Include="Commands\SelectBaseLayout.cs" />
     <Compile Include="Diagnostics\ILog.cs" />
     <Compile Include="Diagnostics\LogWrapper.cs" />
     <Compile Include="IBaseLayoutValidator.cs" />
-    <Compile Include="ILayoutValueProvider.cs" />
+    <Compile Include="IBaseLayoutValueProvider.cs" />
     <Compile Include="BaseLayoutStandardValuesProvider.cs" />
     <Compile Include="Pipelines\GetBaseLayoutItems\GetBaseLayoutItemsArgs.cs" />
     <Compile Include="Pipelines\GetBaseLayoutItems\GetLookupSourceItems.cs" />
