--- a/Sitecore.BaseLayouts/Sitecore.BaseLayouts.csproj
+++ b/Sitecore.BaseLayouts/Sitecore.BaseLayouts.csproj
@@ -74,6 +74,8 @@
     <Compile Include="Caching\CachedBaseLayoutValueProvider.cs" />
     <Compile Include="Caching\IBaseLayoutValueCache.cs" />
     <Compile Include="Caching\BaseLayoutValueCache.cs" />
+    <Compile Include="ClientPipelines\SelectBaseLayout\IDialogLocator.cs" />
+    <Compile Include="ClientPipelines\SelectBaseLayout\SelectBaseLayoutDialogLocator.cs" />
     <Compile Include="Commands\ICommandContextChecker.cs" />
     <Compile Include="Commands\SelectBaseLayout.cs" />
     <Compile Include="Commands\SelectBaseLayoutContextChecker.cs" />
@@ -94,7 +96,7 @@
     <Compile Include="Pipelines\SaveBaseLayout\SaveBaseLayoutArgs.cs" />
     <Compile Include="Pipelines\SaveBaseLayout\SaveNewBaseLayout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Commands\SelectBaseLayoutOptions.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\SelectBaseLayoutOptions.cs" />
     <Compile Include="BaseLayoutSettings.cs" />
     <Compile Include="sitecore modules\shell\BaseLayouts\SelectBaseLayoutForm.cs" />
     <Compile Include="Abstractions\ISheerResponse.cs" />
