--- a/Sitecore.BaseLayouts/Sitecore.BaseLayouts.csproj
+++ b/Sitecore.BaseLayouts/Sitecore.BaseLayouts.csproj
@@ -66,7 +66,9 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstractions\ILog.cs" />
     <Compile Include="Abstractions\IPageModeAccess.cs" />
+    <Compile Include="Abstractions\LogWrapper.cs" />
     <Compile Include="Abstractions\PageModeAccess.cs" />
     <Compile Include="BaseLayoutItem.cs" />
     <Compile Include="BaseLayoutValidator.cs" />
@@ -75,12 +77,12 @@
     <Compile Include="Caching\IBaseLayoutValueCache.cs" />
     <Compile Include="Caching\BaseLayoutValueCache.cs" />
     <Compile Include="ClientPipelines\SelectBaseLayout\IDialogLocator.cs" />
+    <Compile Include="ClientPipelines\SelectBaseLayout\IDialogResultProcessor.cs" />
     <Compile Include="ClientPipelines\SelectBaseLayout\SelectBaseLayoutDialogLocator.cs" />
+    <Compile Include="ClientPipelines\SelectBaseLayout\SelectBaseLayoutDialogResultProcessor.cs" />
     <Compile Include="Commands\ICommandContextChecker.cs" />
     <Compile Include="Commands\SelectBaseLayout.cs" />
     <Compile Include="Commands\SelectBaseLayoutContextChecker.cs" />
-    <Compile Include="Diagnostics\ILog.cs" />
-    <Compile Include="Diagnostics\LogWrapper.cs" />
     <Compile Include="Extensions\ItemExtensions.cs" />
     <Compile Include="IBaseLayoutValidator.cs" />
     <Compile Include="IBaseLayoutValueProvider.cs" />
