--- a/Sitecore.BaseLayouts/Sitecore.BaseLayouts.csproj
+++ b/Sitecore.BaseLayouts/Sitecore.BaseLayouts.csproj
@@ -66,43 +66,43 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstractions\ILog.cs" />
-    <Compile Include="Abstractions\IPageModeAccess.cs" />
-    <Compile Include="Abstractions\LogWrapper.cs" />
-    <Compile Include="Abstractions\PageModeAccess.cs" />
-    <Compile Include="BaseLayoutItem.cs" />
-    <Compile Include="BaseLayoutValidator.cs" />
-    <Compile Include="BaseLayoutValueProvider.cs" />
-    <Compile Include="Caching\CachedBaseLayoutValueProvider.cs" />
-    <Compile Include="Caching\IBaseLayoutValueCache.cs" />
-    <Compile Include="Caching\BaseLayoutValueCache.cs" />
-    <Compile Include="ClientPipelines\SelectBaseLayout\IDialogLocator.cs" />
-    <Compile Include="ClientPipelines\SelectBaseLayout\IDialogResultProcessor.cs" />
-    <Compile Include="ClientPipelines\SelectBaseLayout\SelectBaseLayoutDialogLocator.cs" />
-    <Compile Include="ClientPipelines\SelectBaseLayout\SelectBaseLayoutDialogResultProcessor.cs" />
-    <Compile Include="Commands\ICommandContextChecker.cs" />
-    <Compile Include="Commands\SelectBaseLayout.cs" />
-    <Compile Include="Commands\SelectBaseLayoutContextChecker.cs" />
-    <Compile Include="Extensions\ItemExtensions.cs" />
-    <Compile Include="IBaseLayoutValidator.cs" />
-    <Compile Include="IBaseLayoutValueProvider.cs" />
-    <Compile Include="BaseLayoutStandardValuesProvider.cs" />
-    <Compile Include="Pipelines\GetBaseLayoutItems\GetBaseLayoutItemsArgs.cs" />
-    <Compile Include="Pipelines\GetBaseLayoutItems\GetLookupSourceItems.cs" />
-    <Compile Include="Pipelines\GetBaseLayoutItems\IGetBaseLayoutItemsProcessor.cs" />
-    <Compile Include="Pipelines\IPipelineRunner.cs" />
-    <Compile Include="Pipelines\RunnablePipelineArgs.cs" />
-    <Compile Include="Pipelines\PipelineRunner.cs" />
-    <Compile Include="Pipelines\SaveBaseLayout\CheckForCircularReference.cs" />
-    <Compile Include="Pipelines\SaveBaseLayout\ISaveBaseLayoutProcessor.cs" />
-    <Compile Include="Pipelines\SaveBaseLayout\SaveBaseLayoutArgs.cs" />
-    <Compile Include="Pipelines\SaveBaseLayout\SaveNewBaseLayout.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Abstractions\ILog.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Abstractions\IPageModeAccess.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Abstractions\LogWrapper.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Abstractions\PageModeAccess.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Data\BaseLayoutItem.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Data\BaseLayoutValidator.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Data\BaseLayoutValueProvider.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Caching\CachedBaseLayoutValueProvider.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Caching\IBaseLayoutValueCache.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Caching\BaseLayoutValueCache.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\ClientPipelines\SelectBaseLayout\IDialogLocator.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\ClientPipelines\SelectBaseLayout\IDialogResultProcessor.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\ClientPipelines\SelectBaseLayout\SelectBaseLayoutDialogLocator.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\ClientPipelines\SelectBaseLayout\SelectBaseLayoutDialogResultProcessor.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Commands\ICommandContextChecker.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Commands\SelectBaseLayout.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Commands\SelectBaseLayoutContextChecker.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Extensions\ItemExtensions.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Data\IBaseLayoutValidator.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Data\IBaseLayoutValueProvider.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Data\BaseLayoutStandardValuesProvider.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Pipelines\GetBaseLayoutItems\GetBaseLayoutItemsArgs.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Pipelines\GetBaseLayoutItems\GetLookupSourceItems.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Pipelines\GetBaseLayoutItems\IGetBaseLayoutItemsProcessor.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Pipelines\IPipelineRunner.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Pipelines\RunnablePipelineArgs.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Pipelines\PipelineRunner.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Pipelines\SaveBaseLayout\CheckForCircularReference.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Pipelines\SaveBaseLayout\ISaveBaseLayoutProcessor.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Pipelines\SaveBaseLayout\SaveBaseLayoutArgs.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Pipelines\SaveBaseLayout\SaveNewBaseLayout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sitecore modules\shell\BaseLayouts\SelectBaseLayoutOptions.cs" />
-    <Compile Include="BaseLayoutSettings.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\BaseLayoutSettings.cs" />
     <Compile Include="sitecore modules\shell\BaseLayouts\SelectBaseLayoutForm.cs" />
-    <Compile Include="Abstractions\ISheerResponse.cs" />
-    <Compile Include="Abstractions\SheerResponseWrapper.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Abstractions\ISheerResponse.cs" />
+    <Compile Include="sitecore modules\shell\BaseLayouts\Abstractions\SheerResponseWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Config\Include\BaseLayouts.config">
