--- a/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
+++ b/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
@@ -17,7 +17,19 @@
       </providers>
     </standardValues>
     <commands>
-      <command name="webedit:selectbaselayout" type="Sitecore.BaseLayouts.Commands.SelectBaseLayout,Sitecore.BaseLayouts"/>
+      <command name="webedit:selectbaselayout" type="Sitecore.BaseLayouts.Commands.SelectBaseLayout,Sitecore.BaseLayouts">
+        <param name="sheerResponse" type="Sitecore.BaseLayouts.Abstractions.SheerResponseWrapper, Sitecore.BaseLayouts" />
+        <param name="contextChecker" type="Sitecore.BaseLayouts.Commands.SelectBaseLayoutContextChecker, Sitecore.BaseLayouts">
+          <param name ="pageModeAccess" type="Sitecore.BaseLayouts.Abstractions.PageModeAccess, Sitecore.BaseLayouts" />
+          <param name ="pipelineRunner" type="Sitecore.BaseLayouts.Pipelines.PipelineRunner, Sitecore.BaseLayouts" />
+        </param>
+        <param name="dialogLocator" type="Sitecore.BaseLayouts.ClientPipelines.SelectBaseLayout.SelectBaseLayoutDialogLocator, Sitecore.BaseLayouts">
+          <param name ="pipelineRunner" type="Sitecore.BaseLayouts.Pipelines.PipelineRunner, Sitecore.BaseLayouts" />
+        </param>
+        <param name="dialogResultProcessor" type="Sitecore.BaseLayouts.ClientPipelines.SelectBaseLayout.SelectBaseLayoutDialogResultProcessor, Sitecore.BaseLayouts">
+          <param name ="pipelineRunner" type="Sitecore.BaseLayouts.Pipelines.PipelineRunner, Sitecore.BaseLayouts" />
+        </param>
+      </command>
     </commands>
     <pipelines>
       <getBaseLayoutItems>
