--- a/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
+++ b/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
@@ -3,33 +3,21 @@
     <standardValues>
       <patch:attribute name="defaultProvider" value="baseLayouts" />
       <providers>
-        <add name="baseLayouts" type="Sitecore.BaseLayouts.BaseLayoutStandardValuesProvider, Sitecore.BaseLayouts">
+        <add name="baseLayouts" type="Sitecore.BaseLayouts.Data.BaseLayoutStandardValuesProvider, Sitecore.BaseLayouts">
           <param name="innerProvider" type="Sitecore.Data.StandardValuesProvider, Sitecore.Kernel" />
           <param name="layoutValueProvider" type="Sitecore.BaseLayouts.Caching.CachedBaseLayoutValueProvider, Sitecore.BaseLayouts">
-            <param name="innerProvider" type="Sitecore.BaseLayouts.BaseLayoutValueProvider, Sitecore.BaseLayouts">
-              <param name="layoutValueProvider" type="Sitecore.BaseLayouts.BaseLayoutValidator, Sitecore.BaseLayouts"/>
-              <param name="log" type="Sitecore.BaseLayouts.Diagnostics.LogWrapper, Sitecore.BaseLayouts" />
+            <param name="innerProvider" type="Sitecore.BaseLayouts.Data.BaseLayoutValueProvider, Sitecore.BaseLayouts">
+              <param name="layoutValueProvider" type="Sitecore.BaseLayouts.Data.BaseLayoutValidator, Sitecore.BaseLayouts"/>
+              <param name="log" type="Sitecore.BaseLayouts.Abstractions.LogWrapper, Sitecore.BaseLayouts" />
             </param>
             <param name="cache" type="Sitecore.BaseLayouts.Caching.BaseLayoutValueCache, Sitecore.BaseLayouts"/>
           </param>
-          <param name="log" type="Sitecore.BaseLayouts.Diagnostics.LogWrapper, Sitecore.BaseLayouts" />
+          <param name="log" type="Sitecore.BaseLayouts.Abstractions.LogWrapper, Sitecore.BaseLayouts" />
         </add>
       </providers>
     </standardValues>
     <commands>
-      <command name="webedit:selectbaselayout" type="Sitecore.BaseLayouts.Commands.SelectBaseLayout,Sitecore.BaseLayouts">
-        <param name="sheerResponse" type="Sitecore.BaseLayouts.Abstractions.SheerResponseWrapper, Sitecore.BaseLayouts" />
-        <param name="contextChecker" type="Sitecore.BaseLayouts.Commands.SelectBaseLayoutContextChecker, Sitecore.BaseLayouts">
-          <param name ="pageModeAccess" type="Sitecore.BaseLayouts.Abstractions.PageModeAccess, Sitecore.BaseLayouts" />
-          <param name ="pipelineRunner" type="Sitecore.BaseLayouts.Pipelines.PipelineRunner, Sitecore.BaseLayouts" />
-        </param>
-        <param name="dialogLocator" type="Sitecore.BaseLayouts.ClientPipelines.SelectBaseLayout.SelectBaseLayoutDialogLocator, Sitecore.BaseLayouts">
-          <param name ="pipelineRunner" type="Sitecore.BaseLayouts.Pipelines.PipelineRunner, Sitecore.BaseLayouts" />
-        </param>
-        <param name="dialogResultProcessor" type="Sitecore.BaseLayouts.ClientPipelines.SelectBaseLayout.SelectBaseLayoutDialogResultProcessor, Sitecore.BaseLayouts">
-          <param name ="pipelineRunner" type="Sitecore.BaseLayouts.Pipelines.PipelineRunner, Sitecore.BaseLayouts" />
-        </param>
-      </command>
+      <command name="webedit:selectbaselayout" type="Sitecore.BaseLayouts.Commands.SelectBaseLayout,Sitecore.BaseLayouts" />
     </commands>
     <pipelines>
       <getBaseLayoutItems>
@@ -37,7 +25,7 @@
       </getBaseLayoutItems>
       <saveBaseLayout>
         <processor type="Sitecore.BaseLayouts.Pipelines.SaveBaseLayout.CheckForCircularReference, Sitecore.BaseLayouts">
-          <param name="validator" type="Sitecore.BaseLayouts.BaseLayoutValidator, Sitecore.BaseLayouts" />
+          <param name="validator" type="Sitecore.BaseLayouts.Data.BaseLayoutValidator, Sitecore.BaseLayouts" />
         </processor>
         <processor type="Sitecore.BaseLayouts.Pipelines.SaveBaseLayout.SaveNewBaseLayout, Sitecore.BaseLayouts" />
       </saveBaseLayout>
