--- a/Sitecore.BaseLayouts.Tests/App.config
+++ b/Sitecore.BaseLayouts.Tests/App.config
@@ -128,6 +128,7 @@
       <providers>
         <clear />
         <add name="sitecore" type="Sitecore.Links.LinkProvider, Sitecore.Kernel" addAspxExtension="true" alwaysIncludeServerUrl="false" encodeNames="true" languageEmbedding="asNeeded" languageLocation="filePath" lowercaseUrls="false" shortenUrls="true" useDisplayName="false" />
+        <add name="switcher" type="Sitecore.FakeDb.Links.SwitchingLinkProvider, Sitecore.FakeDb" />
       </providers>
     </linkManager>
     <!-- STANDARD VALUES -->
