--- a/Sitecore.BaseLayouts.Tests/packages.config
+++ b/Sitecore.BaseLayouts.Tests/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NSubstitute" version="1.8.2.0" targetFramework="net45" />
-  <package id="Sitecore.FakeDb" version="0.30.0" targetFramework="net45" />
-  <package id="Sitecore.FakeDb.NSubstitute" version="0.30.0" targetFramework="net45" />
-  <package id="xunit" version="2.0.0" targetFramework="net45" />
+  <package id="NSubstitute" version="1.9.2.0" targetFramework="net45" />
+  <package id="Sitecore.FakeDb" version="0.31.5" targetFramework="net45" />
+  <package id="Sitecore.FakeDb.NSubstitute" version="0.31.5" targetFramework="net45" />
+  <package id="xunit" version="2.1.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.assert" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.core" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="2.0.1" targetFramework="net45" />
+  <package id="xunit.assert" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net45" />
 </packages>
