add sitecore 8 stuff add conditional compilation so both sc72 and sc80 configs build and pass tests

--- a/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
+++ b/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
@@ -27,8 +27,16 @@
         <processor type="Sitecore.BaseLayouts.Pipelines.SaveBaseLayout.CheckForCircularReference, Sitecore.BaseLayouts">
           <param name="validator" type="Sitecore.BaseLayouts.Data.BaseLayoutValidator, Sitecore.BaseLayouts" />
         </processor>
+        <processor type="Sitecore.BaseLayouts.Pipelines.SaveBaseLayout.CheckForVersioningConflict, Sitecore.BaseLayouts">
+          <param name="validator" type="Sitecore.BaseLayouts.Data.BaseLayoutValidator, Sitecore.BaseLayouts" />
+        </processor>
         <processor type="Sitecore.BaseLayouts.Pipelines.SaveBaseLayout.SaveNewBaseLayout, Sitecore.BaseLayouts" />
       </saveBaseLayout>
     </pipelines>
+    <sitecore.experienceeditor.speak.requests>
+      <request name="BaseLayouts.CanExecute" type="Sitecore.BaseLayouts.Commands.CanExecute, Sitecore.BaseLayouts"/>
+      <request name="BaseLayouts.GetDialogUrl" type="Sitecore.BaseLayouts.ClientPipelines.SelectBaseLayout.GetDialogUrl, Sitecore.BaseLayouts"/>
+      <request name="BaseLayouts.Execute" type="Sitecore.BaseLayouts.ClientPipelines.SelectBaseLayout.Execute, Sitecore.BaseLayouts"/>
+    </sitecore.experienceeditor.speak.requests>
   </sitecore>
 </configuration>
