Better way to support 8.0 & 8.1 client side commands and pipelines with a single script

--- a/Sitecore.BaseLayouts/Sitecore.BaseLayouts.csproj
+++ b/Sitecore.BaseLayouts/Sitecore.BaseLayouts.csproj
@@ -110,7 +110,7 @@
       <TransformOnBuild>true</TransformOnBuild>
     </Content>
     <Content Include="sitecore modules\shell\BaseLayouts\Commands\SelectBaseLayout.js" />
-    <Content Include="sitecore modules\shell\BaseLayouts\ExperienceEditorShim.js" />
+    <Content Include="sitecore\shell\client\Sitecore\ExperienceEditor\ExperienceEditor.js" Condition="$(SitecoreVersionNumber) == 8.0" />
     <Content Include="sitecore modules\shell\BaseLayouts\SelectBaseLayout.xml" />
   </ItemGroup>
   <ItemGroup>
