Refactor to move support checks and circular reference check up front - fixes infinite loop in BaseLayoutValueCache

--- a/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
+++ b/Sitecore.BaseLayouts/App_Config/Include/BaseLayouts.config
@@ -3,17 +3,12 @@
     <standardValues>
       <patch:attribute name="defaultProvider" value="baseLayouts" />
       <providers>
+        <add name="baseLayouts" type="Sitecore.BaseLayouts.Data.BaseLayoutStandardValuesProvider, Sitecore.BaseLayouts"/>
+        <!-- Example for how to wrap another standard values provider
         <add name="baseLayouts" type="Sitecore.BaseLayouts.Data.BaseLayoutStandardValuesProvider, Sitecore.BaseLayouts">
           <param name="innerProvider" type="Sitecore.Data.StandardValuesProvider, Sitecore.Kernel" />
-          <param name="layoutValueProvider" type="Sitecore.BaseLayouts.Caching.CachedBaseLayoutValueProvider, Sitecore.BaseLayouts">
-            <param name="innerProvider" type="Sitecore.BaseLayouts.Data.BaseLayoutValueProvider, Sitecore.BaseLayouts">
-              <param name="layoutValueProvider" type="Sitecore.BaseLayouts.Data.BaseLayoutValidator, Sitecore.BaseLayouts"/>
-              <param name="log" type="Sitecore.BaseLayouts.Abstractions.LogWrapper, Sitecore.BaseLayouts" />
-            </param>
-            <param name="cache" type="Sitecore.BaseLayouts.Caching.BaseLayoutValueCache, Sitecore.BaseLayouts"/>
-          </param>
-          <param name="log" type="Sitecore.BaseLayouts.Abstractions.LogWrapper, Sitecore.BaseLayouts" />
         </add>
+        -->
       </providers>
     </standardValues>
     <commands>
